# haskell-dynamo-perftest

./: LICENSE  README.md  haskell-dynamo-perftest.cabal  locustfile.py  stack.yaml
app/: Main.hs
