name:                haskell-dynamo-perftest
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/adbrowne/haskell-dynamo-perftest
license:             BSD3
license-file:        LICENSE
author:              Andrew Browne
maintainer:          brownie@brownie.com.au
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable haskell-dynamo-perftest-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-dynamo-perftest
                     , scotty
                     , amazonka
                     , amazonka-core
                     , amazonka-dynamodb
                     , amazonka-ec2
                     , lens
                     , text
                     , semigroups
                     , unordered-containers
                     , transformers
                     , aeson
                     , resourcet
  default-language:    Haskell2010

test-suite haskell-dynamo-perftest-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-dynamo-perftest
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adbrowne/haskell-dynamo-perftest
